# Polynomial

./: .gitignore  CMakeLists.txt  README.md  io_helper.h  main  main.cpp  polynomial.cpp  polynomial.h  polynomial_helper.cpp  polynomial_helper.h  storage.h
include/: polynomial.hpp  storage.hpp
src/: main.cpp  polynomial.cpp
